...
              >
                <AuthHeader navigation={this.props.navigation} tenantName={tenantName} tenantLogo={tenantLogo} />
                <Icon style={style.dropdownIcon} size={scale(25)} as={MaterialIcons} name={'arrow-drop-down'} />
              </TouchableOpacity>
              <KeyboardAwareScrollView keyboardShouldPersistTaps={'handled'} bounces={false} persistentScrollbar={true} style={style.scrollView} contentContainerStyle={style.scrollViewContentContainer}>
                <Input
                  testID={'LoginEmailInput'}
                  leftIcon={<Icon size={scale(20)} name="email" as={MaterialCommunityIcons} style={formStyle.inputIcon} />}
                  containerStyle={formStyle.inputContainer}
                  inputStyle={formStyle.inputText}
                  inputContainerStyle={formStyle.inputTextContainer}
                  value={email}
                  placeholder={I18n.t('authentication.email')}
...
                  returnKeyType="next"
                  onSubmitEditing={() => this.passwordInput.focus()}
                  renderErrorMessage={false}
                  onChangeText={(newEmail: string) => this.setState({email: newEmail})}
                />
                <Input
                  testID={'LoginPasswordInput'}
                  ref={(ref: TextInput) => (this.passwordInput = ref)}
                  leftIcon={<Icon size={scale(20)} name="lock" as={MaterialCommunityIcons} style={formStyle.inputIcon} />}
                  rightIcon={<Icon
                    testID={'LoginPasswordInputRightIcon'}
                    name={hidePassword ? 'eye' : 'eye-off'}
                    size={scale(20)}
                    as={Ionicons}
                    onPress={() => this.setState({ hidePassword: !hidePassword })}
                    style={formStyle.inputIcon}
                  />}
...
                  onSubmitEditing={() => Keyboard.dismiss()}
                  renderErrorMessage={false}
                  onChangeText={(newPassword: string) => this.setState({password: newPassword})}
                />
                <CheckBox
                  containerStyle={[formStyle.checkboxContainer, style.checkboxContainer]}
                  testID={'LoginEULACheckbox'}
                  textStyle={{backgroundColor: 'transparent'}}
                  checked={eula}
                  onPress={() => this.setState({ eula: !eula })}
                  title={
                    <Text style={formStyle.checkboxText}>
                      {I18n.t('authentication.acceptEula')}
...
                    </Text>
                  }
                  uncheckedIcon={<Icon size={scale(25)} name="checkbox-blank-outline" as={MaterialCommunityIcons} style={formStyle.inputIcon} />}
                  checkedIcon={<Icon size={scale(25)} name="checkbox-outline" as={MaterialCommunityIcons} style={formStyle.inputIcon} />}
                />
                <Button
                  testID={'LoginButton'}
                  title={I18n.t('authentication.signIn')}
                  titleStyle={formStyle.buttonText}
                  disabled={!this.isFormValid()}
                  disabledStyle={formStyle.buttonDisabled}
                  disabledTitleStyle={formStyle.buttonTextDisabled}
                  containerStyle={formStyle.buttonContainer}
...
